fix spacing issue on navbar

--- a/style.css
+++ b/style.css
@@ -9,15 +9,22 @@ html {
 
 body {
     background-color: #080424;
-    padding-top: 5rem;
+  
     font-family: montserrat, sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
+.navbar-default {
+    margin-bottom: 0px !important;
+}
+
 .navbar {
     background-color: #d9d9d9;
-    box-shadow: 0 0 2.5rem rgba(138, 189, 222, .75);
+    /* box-shadow: 0 0 2.5rem rgba(138, 189, 222, .75); */
+    width: 100vw;
+   padding-bottom: 0.5rem;
+   padding-top: 0.5rem;
 }
 
 .navbar-toggler-icon{
@@ -60,11 +67,13 @@ body {
 
 #introduction {
     min-height: 100vh;
-    margin-top: 5.5rem;
+    padding-top: 5.5rem;
+    padding-bottom: 3rem;
+
 }
 
 #intro {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 #intro h3 {
@@ -84,7 +93,7 @@ body {
 
 #cardGallery {
     min-height: 100vh;
-    padding-top: 4.5rem;
+    padding-top: 5.5rem;
     display: flex;
     justify-content: center;
     /* background: url(./assetsLogo/AdobeStock_210096418_Preview\ copy.jpg) no-repeat center center fixed;
@@ -98,6 +107,9 @@ body {
     border-radius: 1rem;
     background-color: #080424;
     flex: none;
+    width: 20vw;
+    height: 20vw;
+    
 }
 
 .logo {    
